chore: integrate NullAway